// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordion-container applies correct text size class from contentTxtSize prop: text size large 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-6-nhvmv">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-6-nhvmv-header-0">
          <button-component aria-controls="acc-6-nhvmv-collapse-0" aria-expanded="true" data-bs-target="#acc-6-nhvmv-collapse-0" data-bs-toggle="collapse" id="acc-6-nhvmv-trigger-0">
            <!---->
            <button aria-controls="acc-6-nhvmv-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-6-nhvmv-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-down">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-labelledby="acc-6-nhvmv-trigger-0" class="accordion-collapse collapsing" id="acc-6-nhvmv-collapse-0" role="region" style="height: 0px;">
          <div class="accordion-body text-large">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-6-nhvmv-header-1">
          <button-component aria-controls="acc-6-nhvmv-collapse-1" aria-expanded="false" data-bs-target="#acc-6-nhvmv-collapse-1" data-bs-toggle="collapse" id="acc-6-nhvmv-trigger-1">
            <!---->
            <button aria-controls="acc-6-nhvmv-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-6-nhvmv-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-6-nhvmv-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-6-nhvmv-collapse-1" inert="" role="region">
          <div class="accordion-body text-large">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation close 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-4-mghx3">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-4-mghx3-header-0">
          <button-component aria-controls="acc-4-mghx3-collapse-0" aria-expanded="false" data-bs-target="#acc-4-mghx3-collapse-0" data-bs-toggle="collapse" id="acc-4-mghx3-trigger-0">
            <!---->
            <button aria-controls="acc-4-mghx3-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-mghx3-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-4-mghx3-trigger-0" class="accordion-collapse collapsing" id="acc-4-mghx3-collapse-0" inert="" role="region" style="height: 0px;">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-4-mghx3-header-1">
          <button-component aria-controls="acc-4-mghx3-collapse-1" aria-expanded="false" data-bs-target="#acc-4-mghx3-collapse-1" data-bs-toggle="collapse" id="acc-4-mghx3-trigger-1">
            <!---->
            <button aria-controls="acc-4-mghx3-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-mghx3-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-4-mghx3-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-4-mghx3-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-4-mghx3">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-4-mghx3-header-0">
          <button-component aria-controls="acc-4-mghx3-collapse-0" aria-expanded="true" data-bs-target="#acc-4-mghx3-collapse-0" data-bs-toggle="collapse" id="acc-4-mghx3-trigger-0">
            <!---->
            <button aria-controls="acc-4-mghx3-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-4-mghx3-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-down">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-labelledby="acc-4-mghx3-trigger-0" class="accordion-collapse collapsing" id="acc-4-mghx3-collapse-0" role="region" style="height: 0px;">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-4-mghx3-header-1">
          <button-component aria-controls="acc-4-mghx3-collapse-1" aria-expanded="false" data-bs-target="#acc-4-mghx3-collapse-1" data-bs-toggle="collapse" id="acc-4-mghx3-trigger-1">
            <!---->
            <button aria-controls="acc-4-mghx3-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-mghx3-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-4-mghx3-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-4-mghx3-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: after icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="sc-accordion">
    <div class="accordion" id="acc-5-rzxil">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-5-rzxil-header-0">
          <button-component aria-controls="acc-5-rzxil-collapse-0" aria-expanded="true" data-bs-target="#acc-5-rzxil-collapse-0" data-bs-toggle="collapse" id="acc-5-rzxil-trigger-0">
            <!---->
            <button aria-controls="acc-5-rzxil-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-5-rzxil-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-down">
                  <icon-component icon="icon-open"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-labelledby="acc-5-rzxil-trigger-0" class="accordion-collapse collapsing" id="acc-5-rzxil-collapse-0" role="region" style="height: 0px;">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-5-rzxil-header-1">
          <button-component aria-controls="acc-5-rzxil-collapse-1" aria-expanded="false" data-bs-target="#acc-5-rzxil-collapse-1" data-bs-toggle="collapse" id="acc-5-rzxil-trigger-1">
            <!---->
            <button aria-controls="acc-5-rzxil-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-rzxil-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="icon-closed"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-5-rzxil-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-5-rzxil-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: before icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="sc-accordion">
    <div class="accordion" id="acc-5-rzxil">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-5-rzxil-header-0">
          <button-component aria-controls="acc-5-rzxil-collapse-0" aria-expanded="false" data-bs-target="#acc-5-rzxil-collapse-0" data-bs-toggle="collapse" id="acc-5-rzxil-trigger-0">
            <!---->
            <button aria-controls="acc-5-rzxil-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-rzxil-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="icon-closed"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-5-rzxil-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-5-rzxil-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-5-rzxil-header-1">
          <button-component aria-controls="acc-5-rzxil-collapse-1" aria-expanded="false" data-bs-target="#acc-5-rzxil-collapse-1" data-bs-toggle="collapse" id="acc-5-rzxil-trigger-1">
            <!---->
            <button aria-controls="acc-5-rzxil-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-rzxil-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="icon-closed"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-5-rzxil-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-5-rzxil-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders an item with empty header and content strings: empty header and content 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-16-ybz4e">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-16-ybz4e-header-0">
          <button-component aria-controls="acc-16-ybz4e-collapse-0" aria-expanded="false" data-bs-target="#acc-16-ybz4e-collapse-0" data-bs-toggle="collapse" id="acc-16-ybz4e-trigger-0">
            <!---->
            <button aria-controls="acc-16-ybz4e-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-16-ybz4e-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-16-ybz4e-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-16-ybz4e-collapse-0" inert="" role="region">
          <div class="accordion-body"></div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders correct ARIA attributes on accordion headers and panels (including hidden/inert when collapsed): ARIA attributes check 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="my-accordion">
      <div class="accordion-item">
        <h2 class="accordion-header" id="my-accordion-header-0">
          <button-component aria-controls="my-accordion-collapse-0" aria-expanded="false" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" id="my-accordion-trigger-0">
            <!---->
            <button aria-controls="my-accordion-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Item 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="my-accordion-trigger-0" class="accordion-collapse collapse" hidden="" id="my-accordion-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders empty accordion when data is an empty array: empty array data 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-13-evpv2"></div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: empty string icon 1`] = `
<accordion-container icon="">
  <div class="sc-accordion">
    <div class="accordion" id="acc-17-i1u2t">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-17-i1u2t-header-0">
          <button-component aria-controls="acc-17-i1u2t-collapse-0" aria-expanded="false" data-bs-target="#acc-17-i1u2t-collapse-0" data-bs-toggle="collapse" id="acc-17-i1u2t-trigger-0">
            <!---->
            <button aria-controls="acc-17-i1u2t-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-17-i1u2t-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                H
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-17-i1u2t-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-17-i1u2t-collapse-0" inert="" role="region">
          <div class="accordion-body">
            C
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: malformed icon string 1`] = `
<accordion-container icon="  , , ,">
  <div class="sc-accordion">
    <div class="accordion" id="acc-19-1g43k">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-19-1g43k-header-0">
          <button-component aria-controls="acc-19-1g43k-collapse-0" aria-expanded="false" data-bs-target="#acc-19-1g43k-collapse-0" data-bs-toggle="collapse" id="acc-19-1g43k-trigger-0">
            <!---->
            <button aria-controls="acc-19-1g43k-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-19-1g43k-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                H
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-19-1g43k-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-19-1g43k-collapse-0" inert="" role="region">
          <div class="accordion-body">
            C
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: null icon 1`] = `
<accordion-container>
  <div class="sc-accordion">
    <div class="accordion" id="acc-18-b3qzy">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-18-b3qzy-header-0">
          <button-component aria-controls="acc-18-b3qzy-collapse-0" aria-expanded="false" data-bs-target="#acc-18-b3qzy-collapse-0" data-bs-toggle="collapse" id="acc-18-b3qzy-trigger-0">
            <!---->
            <button aria-controls="acc-18-b3qzy-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-18-b3qzy-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                H
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-18-b3qzy-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-18-b3qzy-collapse-0" inert="" role="region">
          <div class="accordion-body">
            C
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: non-array data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-10-zcx8v"></div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: null data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-9-q9e2d"></div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: undefined data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-8-w3nre"></div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders many accordion items and matches snapshot: long data array (12 items) 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-15-2uqwd">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-0">
          <button-component aria-controls="acc-15-2uqwd-collapse-0" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-0" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-0">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-1">
          <button-component aria-controls="acc-15-2uqwd-collapse-1" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-1" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-1">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-2">
          <button-component aria-controls="acc-15-2uqwd-collapse-2" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-2" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-2">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-2" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-2" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 3
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-2" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-2" inert="" role="region">
          <div class="accordion-body">
            Content 3
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-3">
          <button-component aria-controls="acc-15-2uqwd-collapse-3" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-3" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-3">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-3" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-3" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 4
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-3" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-3" inert="" role="region">
          <div class="accordion-body">
            Content 4
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-4">
          <button-component aria-controls="acc-15-2uqwd-collapse-4" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-4" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-4">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-4" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-4" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 5
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-4" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-4" inert="" role="region">
          <div class="accordion-body">
            Content 5
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-5">
          <button-component aria-controls="acc-15-2uqwd-collapse-5" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-5" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-5">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-5" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-5" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 6
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-5" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-5" inert="" role="region">
          <div class="accordion-body">
            Content 6
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-6">
          <button-component aria-controls="acc-15-2uqwd-collapse-6" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-6" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-6">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-6" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-6" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 7
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-6" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-6" inert="" role="region">
          <div class="accordion-body">
            Content 7
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-7">
          <button-component aria-controls="acc-15-2uqwd-collapse-7" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-7" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-7">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-7" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-7" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 8
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-7" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-7" inert="" role="region">
          <div class="accordion-body">
            Content 8
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-8">
          <button-component aria-controls="acc-15-2uqwd-collapse-8" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-8" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-8">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-8" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-8" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 9
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-8" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-8" inert="" role="region">
          <div class="accordion-body">
            Content 9
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-9">
          <button-component aria-controls="acc-15-2uqwd-collapse-9" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-9" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-9">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-9" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-9" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 10
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-9" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-9" inert="" role="region">
          <div class="accordion-body">
            Content 10
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-10">
          <button-component aria-controls="acc-15-2uqwd-collapse-10" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-10" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-10">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-10" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-10" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 11
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-10" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-10" inert="" role="region">
          <div class="accordion-body">
            Content 11
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-15-2uqwd-header-11">
          <button-component aria-controls="acc-15-2uqwd-collapse-11" aria-expanded="false" data-bs-target="#acc-15-2uqwd-collapse-11" data-bs-toggle="collapse" id="acc-15-2uqwd-trigger-11">
            <!---->
            <button aria-controls="acc-15-2uqwd-collapse-11" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-2uqwd-collapse-11" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 12
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-15-2uqwd-trigger-11" class="accordion-collapse collapse" hidden="" id="acc-15-2uqwd-collapse-11" inert="" role="region">
          <div class="accordion-body">
            Content 12
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders only first two icons from icon="a,b,c": icon prop with extra values (a,b,c) 1`] = `
<accordion-container icon="a,b,c">
  <div class="sc-accordion">
    <div class="accordion" id="acc-21-qxgir">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-21-qxgir-header-0">
          <button-component aria-controls="acc-21-qxgir-collapse-0" aria-expanded="false" data-bs-target="#acc-21-qxgir-collapse-0" data-bs-toggle="collapse" id="acc-21-qxgir-trigger-0">
            <!---->
            <button aria-controls="acc-21-qxgir-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-21-qxgir-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                H
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="a"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-21-qxgir-trigger-0" class="accordion-collapse collapsing" id="acc-21-qxgir-collapse-0" inert="" role="region" style="height: 0px;">
          <div class="accordion-body">
            C
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders outlined, block, and disabled props: outlined-block-disabled 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-2-n90fx">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-2-n90fx-header-0">
          <button-component aria-controls="acc-2-n90fx-collapse-0" aria-expanded="false" data-bs-target="#acc-2-n90fx-collapse-0" data-bs-toggle="collapse" id="acc-2-n90fx-trigger-0">
            <!---->
            <button aria-controls="acc-2-n90fx-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-n90fx-collapse-0" data-bs-toggle="collapse" disabled="" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-2-n90fx-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-2-n90fx-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-2-n90fx-header-1">
          <button-component aria-controls="acc-2-n90fx-collapse-1" aria-expanded="false" data-bs-target="#acc-2-n90fx-collapse-1" data-bs-toggle="collapse" id="acc-2-n90fx-trigger-1">
            <!---->
            <button aria-controls="acc-2-n90fx-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-n90fx-collapse-1" data-bs-toggle="collapse" disabled="" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-2-n90fx-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-2-n90fx-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders single static icon and does not change on toggle: static single icon toggle does not change 1`] = `
<accordion-container icon="only-icon">
  <div class="sc-accordion">
    <div class="accordion" id="acc-22-bscqr">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-22-bscqr-header-0">
          <button-component aria-controls="acc-22-bscqr-collapse-0" aria-expanded="false" data-bs-target="#acc-22-bscqr-collapse-0" data-bs-toggle="collapse" id="acc-22-bscqr-trigger-0">
            <!---->
            <button aria-controls="acc-22-bscqr-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-22-bscqr-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Static
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="only-icon"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-22-bscqr-trigger-0" class="accordion-collapse collapsing" id="acc-22-bscqr-collapse-0" inert="" role="region" style="height: 0px;">
          <div class="accordion-body">
            Content
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders static icon with no toggle switch: static icon no switch 1`] = `
<accordion-container icon="icon-static">
  <div class="sc-accordion">
    <div class="accordion" id="acc-7-bgnzn">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-7-bgnzn-header-0">
          <button-component aria-controls="acc-7-bgnzn-collapse-0" aria-expanded="false" data-bs-target="#acc-7-bgnzn-collapse-0" data-bs-toggle="collapse" id="acc-7-bgnzn-trigger-0">
            <!---->
            <button aria-controls="acc-7-bgnzn-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-bgnzn-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="icon-static"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-7-bgnzn-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-7-bgnzn-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-7-bgnzn-header-1">
          <button-component aria-controls="acc-7-bgnzn-collapse-1" aria-expanded="false" data-bs-target="#acc-7-bgnzn-collapse-1" data-bs-toggle="collapse" id="acc-7-bgnzn-trigger-1">
            <!---->
            <button aria-controls="acc-7-bgnzn-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-bgnzn-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="icon-static"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-7-bgnzn-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-7-bgnzn-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders with given data and matches snapshot 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-1-9a4z6">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-1-9a4z6-header-0">
          <button-component aria-controls="acc-1-9a4z6-collapse-0" aria-expanded="false" data-bs-target="#acc-1-9a4z6-collapse-0" data-bs-toggle="collapse" id="acc-1-9a4z6-trigger-0">
            <!---->
            <button aria-controls="acc-1-9a4z6-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-9a4z6-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-1-9a4z6-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-1-9a4z6-collapse-0" inert="" role="region">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-1-9a4z6-header-1">
          <button-component aria-controls="acc-1-9a4z6-collapse-1" aria-expanded="false" data-bs-target="#acc-1-9a4z6-collapse-1" data-bs-toggle="collapse" id="acc-1-9a4z6-trigger-1">
            <!---->
            <button aria-controls="acc-1-9a4z6-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-9a4z6-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-1-9a4z6-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-1-9a4z6-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container toggles accordion via click and matches snapshot: click toggle first open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="sc-accordion">
    <div class="accordion" id="acc-3-008d4">
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-3-008d4-header-0">
          <button-component aria-controls="acc-3-008d4-collapse-0" aria-expanded="true" data-bs-target="#acc-3-008d4-collapse-0" data-bs-toggle="collapse" id="acc-3-008d4-trigger-0">
            <!---->
            <button aria-controls="acc-3-008d4-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-3-008d4-collapse-0" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 1
                <span aria-hidden="true" class="rotate-down">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-labelledby="acc-3-008d4-trigger-0" class="accordion-collapse collapsing" id="acc-3-008d4-collapse-0" role="region" style="height: 0px;">
          <div class="accordion-body">
            Content 1
          </div>
        </div>
      </div>
      <div class="accordion-item">
        <h2 class="accordion-header" id="acc-3-008d4-header-1">
          <button-component aria-controls="acc-3-008d4-collapse-1" aria-expanded="false" data-bs-target="#acc-3-008d4-collapse-1" data-bs-toggle="collapse" id="acc-3-008d4-trigger-1">
            <!---->
            <button aria-controls="acc-3-008d4-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-3-008d4-collapse-1" data-bs-toggle="collapse" type="button">
              <span class="btn__content">
                Header 2
                <span aria-hidden="true" class="rotate-up">
                  <icon-component icon="fas fa-angle-down"></icon-component>
                </span>
              </span>
            </button>
          </button-component>
        </h2>
        <div aria-hidden="true" aria-labelledby="acc-3-008d4-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-3-008d4-collapse-1" inert="" role="region">
          <div class="accordion-body">
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;
